[project]
name = "cacheable"
version = "0.1.0"
description = "A magic class to cache expensive objects based on their input arguments."
authors = [{ name = "Anastasia Golovin", email = "asgolovin@protonmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    'dataclass-wizard (>=0.26.0,<0.27.0)',
    'argparse (>=1.4.0,<2.0.0)',
    'logging (>=0.4.9.6,<0.5.0.0)',
    'coloredlogs (>=15.0.1,<16.0.0)',
    "dotenv (>=0.9.9,<0.10.0)",
    "tqdm (>=4.67.1,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
